S114: Address issue with xcolor-multirow interaction

--- a/papers/114/source/Makefile
+++ b/papers/114/source/Makefile
@@ -21,7 +21,7 @@ release: all mostlyclean
 all: ccscse25_114.pdf
 
 ccscse25_114.pdf: ccscse25_114.tex 
-	$(LATEXMK) -pdf -bibtex $^
+	$(LATEXMK) -pdf -bibtex -shell-escape $^
 
 # Clean targets
 mostlyclean:
