S109: add shell-escape to makefile

--- a/papers/109/source/Makefile
+++ b/papers/109/source/Makefile
@@ -21,7 +21,7 @@ release: all mostlyclean
 all: ccscse25_109.pdf
 
 ccscse25_109.pdf: ccscse25_109.tex 
-	$(LATEXMK) -pdf -bibtex $^
+	$(LATEXMK) -pdf -bibtex -shell-escape $^
 
 # Clean targets
 mostlyclean:
