--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,7 @@ flycheck_*.el
 .dir-locals.el
 
 # Latex ignores
-# We generate all output, so igore PDF and DVI
-*.pdf
+# Some PDFs are valid content
 *.dvi
 # Definitely want to igore LaTeX temp files
 *.aux
@@ -87,10 +86,7 @@ flycheck_*.el
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
 
-## Generated if empty string is given at "Please type another file name for output:"
-.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
